<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wesal</string>
    <string name="donate_products">Products</string>
    <string name="sharing_activity">Activity</string>
    <string name="choose_the_charity">Choose the charity</string>
    <string name="search_for_blood">Blood</string>
    <string name="donate_money">Money</string>
    <string name="call">Call</string>
    <string name="home">Home</string>
    <string name="donate_bold">Donate Bold</string>
    <string name="donate_time">Donate Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="notes">Notes</string>
    <string name="add_image">add image</string>
    <string name="submit">Submit</string>
    <string name="select_your_blood_type">Select Your Blood Type</string>
    <string name="enter_your_id" tools:ignore="TypographyEllipsis">Enter your ID...</string>
    <string name="enter">Enter</string>
    <string name="choose_material_type">Choose Material Type..</string>

    <string-array name="Blood_Types">
        <item>select your blood type</item>
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="matrial_typies">
        <item>clothes</item>
        <item>drugs</item>
        <item>furniture</item>
        <item>others</item>
    </string-array>
    <string name="title_activity_search_map">Map</string>
    <string name="data_recorded">Data Recorder</string>
    <string name="missed_data">Missed Data</string>
    <string name="enter_correct_data">enter correct data</string>
    <string name="ok">OK</string>
    <string name="some_error_accurate">some error accurate</string>
    <string name="choose_charity_frist">Choose charity first</string>
    <string name="charity_name">charity Name</string>
    <string name="charaity_pic">charaity pic</string>
    <string name="about">about</string>
    <string name="chech_the_connection">check the connection</string>
    <string name="title_activity_maps">Map</string>
    <string name="your_location">Your Location</string>
    <string name="don_t_have_an_id">Don`t have an id?</string>
    <string name="get_id_her">Get One here</string>
    <string name="time">Time</string>
    <string name="for_volunteers_only">For volunteers Only</string>
    <string name="incorrect_id">Incorrect ID</string>
    <string name="get_id">Get ID</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_you_phone_number">Enter you phone number</string>
    <string name="email">Email</string>
    <string name="optional">(Optional)</string>
    <string name="message">Message</string>
    <string name="type_a_message">type a message</string>
    <string name="have_an_id">Have an Id?</string>
    <string name="enter_it_here">Enter it Here</string>
    <string name="success">Success</string>
    <string name="some_error_acurate_try_again">some error accurate try again</string>
</resources>
