<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_not_whit"
    tools:context=".VoulnteringApplication">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_par_Activity_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar_shap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:titleTextColor="#fff" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="50dp"
        android:background="#878A8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_par_Activity_ID" />
    <TextView
        android:id="@+id/TEXTID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@color/background_not_whit"
        android:fontFamily="sans-serif-black"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/get_id"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/nameEditID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_par_Activity_ID"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/nameTEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TEXTID" />
    <EditText

        android:id="@+id/nameEditID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/enter_your_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTEXT" />
    <TextView
        android:id="@+id/phoneTEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/phone_number"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditID" />
    <EditText
        android:id="@+id/phoneEditID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/enter_you_phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneTEXT" />

    <TextView
        android:id="@+id/mailTEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/email"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneEditID" />

    <EditText
        android:id="@+id/mailEditID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/enter_you_phone_number"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mailTEXT" />
    <TextView
        android:id="@+id/messageTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/message"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mailEditID" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/optional"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintStart_toEndOf="@id/messageTEXT"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@id/mailEditID" />
</androidx.constraintlayout.widget.ConstraintLayout>